Fix padding on mobile

--- a/src/custom-components/home.css
+++ b/src/custom-components/home.css
@@ -16,7 +16,6 @@ h1 {
 h2,
 h3 {
   margin-top: 25px;
-
   margin-bottom: 25px;
 }
 
@@ -29,8 +28,19 @@ p {
 
 section,
 header-2 {
-  padding-left: var(--spacing-11);
-  padding-right: var(--spacing-11);
-  padding-top: var(--spacing-11);
-  padding-bottom: var(--spacing-11);
+  padding-left: var(--spacing-2);
+  padding-right: var(--spacing-2);
+  padding-top: var(--spacing-2);
+  padding-bottom: var(--spacing-2);
+}
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  section,
+  header-2 {
+    padding-left: var(--spacing-11);
+    padding-right: var(--spacing-11);
+    padding-top: var(--spacing-11);
+    padding-bottom: var(--spacing-11);
+  }
 }
